# lib_robot_arm

./: CMakeLists.txt  README.md
include/can_communicator/: can_communicator.hpp
include/lkmotor_controller/: lkmotor_controller.hpp  lkmotor_listener.hpp  motor_config.hpp  utils.hpp
include/pcan/: libpcan.h  libpcanfd.h
src/: CMakeLists.txt
src/can_communicator/: CMakeLists.txt  can_communicator.cpp
src/lkmotor_controller/: CMakeLists.txt  lkmotor_controller.cpp  lkmotor_listener.cpp  motor_config.cpp  utils.cpp
test/: CMakeLists.txt  test.cpp  test_atomic_signal.cpp  test_get_multi_encoder.cpp  test_loop_time.cpp  test_process_feedback.cpp  test_recorder.cpp  test_replay.cpp  test_servo.cpp  test_set_zero.cpp
trajectory/: test.yaml
